# pyxtb

./: .gitignore  LICENCE  README.md  example.ipynb  mkdocs.yml  pyproject.toml
docs/: Xtb_doc.md  index.md  types.md
pyxtb/: __init__.py  _types.py  api.py  errors.py
tests/: test_api.py  test_data_fetch.py
