[tool.poetry]
name = "pyxtb"
version = "1.0.0.post1"
description = "Python wrapper for XTB HTTP API"
authors = ["Michal Karol <michal.p.karol@gmail.com>"]
readme = "README.md"
license = "MIT License"
keywords = ["xtb", "finance", "stock"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",

    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: MIT License",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.urls]
Homepage = "https://michalkarol.github.io/pyxtb/"
Documentation = "https://michalkarol.github.io/pyxtb/"
Repository = "https://github.com/MichalKarol/pyxtb"
Issues = "https://github.com/MichalKarol/pyxtb/issues"
Releases = "https://github.com/MichalKarol/pyxtb/releases"

[tool.poetry.dependencies]
python = "^3.12"
dataclasses-json = "^0.6.7"
ruff = "^0.7.0"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
